rcfilters: Style fixes and cleanup
* Set border-box on FilterGroupWidget and FilterItemWidget to prevent
  horizontal scrolling in the filter popup
* Remove unused styles for -invalid-notice and -invalid-filter
* Move styles for FilterCapsuleMultiselectWidget to the right file
* Suppress both bottom and top margin for FieldLayouts in FilterItemWidget
  (the only reason a top margin wasn't applied was because the FieldLayout
  was a first child, which is somewhat fragile)

--- a/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.ui.FilterGroupWidget.less
+++ b/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.ui.FilterGroupWidget.less
@@ -1,3 +1,5 @@
+@import "mediawiki.mixins";
+
 .mw-rcfilters-ui-filterGroupWidget {
 	padding-bottom: 0.5em;
 
@@ -6,6 +8,7 @@
 		background: #eaecf0;
 		padding: 0.5em 0.75em;
 		color: #555a5d;
+		.box-sizing( border-box );
 	}
 
 	&-active {
@@ -14,13 +17,5 @@
 		}
 	}
 
-	&-invalid-notice {
-		padding: 0.5em;
-		font-style: italic;
-		display: none;
-
-		.mw-rcfilters-ui-filterGroupWidget-invalid & {
-			display: block;
-		}
 	}
 }
