--- a/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.ui.FilterItemWidget.less
+++ b/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.ui.FilterItemWidget.less
@@ -1,5 +1,8 @@
+@import "mediawiki.mixins";
+
 .mw-rcfilters-ui-filterItemWidget {
 	padding-left: 0.5em;
+	.box-sizing( border-box );
 
 	&-label {
 		&-title {
@@ -13,7 +16,7 @@
 	}
 
 	.oo-ui-fieldLayout.oo-ui-fieldLayout-align-inline {
-		margin-bottom: 0 !important;
+		margin: 0 !important;
 	}
 
 	&-inactive {
